refactor(InitStatusDto): dto가 출력 형식이 아닌 데이터를 가지도록 수정
- 출력 형식은 view에서 담당함.